overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@ header{
         right: -100%;
         background-color: white;
         width: 100%;
-        max-height: 2000%;
+        max-height: 200%;
         transition: .5s;
         display: flex;
         flex-direction: column;
